--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
-.container{
+/* .genc{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-    /* width: 800px; */
-}
+    
+} */
