--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-
-/* .genc{
+/* .gencontainer{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     
-} */
+}  */
