--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   background-color: rgb(32,32,32);
 }
 .form-label{
-  color: #DC4C64;
+  color: #4c77dc;
  
 }
 .form-control{
@@ -23,18 +23,16 @@ justify-content: center;
 }
 
 .form-head{
-color: #DC4C64;
+color: #4c77dc;
 display: flex;
 justify-content: center;
 }
-.form-label{
-  color: #DC4C64;
-}
+
 .form-control{
   background-color: #9FA6B2;
 }
 .signup_head{
-  color: #DC4C64;
+  color: #4c77dc;
 }
     
 
