--- a/style.css
+++ b/style.css
@@ -11,34 +11,23 @@ body{
   
 }
 .navbar{
-  background-color: #090222;
+  background-color: #000000;
 }
 .navbar-nav .nav-item .nav-link {
-  position: relative; /* Create a positioning context */
-  color: #fff; /* Default text color */
-  text-decoration: none; /* Remove underline */
+  position: relative; 
+  color: #fff;
+  text-decoration: none; 
 }
 
-.navbar-nav .nav-item .nav-link::after {
-  content: ''; /* Create the underline element */
-  position: absolute;
-  left: 0;
-  bottom: -2px; /* Adjust the position of the underline */
-  width: 100%; /* Full width of the link */
-  height: 2px; /* Height of the underline */
-  background-color: red; /* Red underline color */
-  transition: background-color 0.3s; /* Transition for hover effect */
-}
-
-.navbar-nav .nav-item.active .nav-link::after,
-.navbar-nav .nav-item .nav-link:hover::after {
-  background-color: #fff; /* White underline color on hover and active */
-}
-
-.navbar-nav .nav-item.active .nav-link,
 .navbar-nav .nav-item .nav-link:hover {
-  color: red; /* Red text color on hover and active */
+
+
+  color: red; 
+  transition: background-color 0.3s; 
 }
+
+
+
 
 .comvo_button{
   text-decoration: none;
@@ -127,7 +116,7 @@ justify-content: center;
 .site-footer
 {
   background-color:#000000;
-  padding:45px 0 20px;
+  padding:25px;
   font-size:15px;
   line-height:24px;
   color:#dfd7d7;
