--- a/style.css
+++ b/style.css
@@ -26,8 +26,14 @@ body{
   transition: background-color 0.3s; 
 }
 
-
-
+/* customer logo */
+.customer_logo {
+  display: inline-block;
+  padding: 5px 8px;
+  border: 3px solid red;
+  background-color: black;
+  color: white;
+}
 
 .comvo_button{
   text-decoration: none;
